--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>WebGL-Portal</title>
-    <meta charset="UTF-8"/>
     <meta lang="en"/>
-    <meta name="description" content="WebGL-Portal"/>
+    <meta name="description"
+          content="WebGL-Portal -- Utilizing the power of WebGL we hope to be able to present a project that can show off everything we learned during the term."/>
     <meta name="keywords" content="WebGL-Portal"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="https://greggman.github.io/webgl-lint/webgl-lint.js" crossorigin></script>
