--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="./Common/MV.js"></script>
     <script type="text/javascript" src="./Common/MVnew.js"></script>
     <script type="text/javascript" src="./camera.js"></script>
+    <script type="text/javascript" src="./drawable.js"></script>
     <script type="text/javascript" src="./skybox.js"></script>
     <script type="text/javascript" src="./plane.js"></script>
     <script type="text/javascript" src="./cube.js"></script>
