starting from zero in a new world

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="./skybox.js"></script>
     <script type="text/javascript" src="./plane.js"></script>
     <script type="text/javascript" src="./cube.js"></script>
+    <script type="text/javascript" src="./pipe.js"></script>
+    <script type="text/javascript" src="./gun.js"></script>
     <script type="text/javascript" src="./app.js"></script>
   </head>
   <body>
