--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <script type="text/javascript" src="./plane.js"></script>
     <script type="text/javascript" src="./cube.js"></script>
     <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./gun.js"></script>
+    <script type="text/javascript" src="./loadObjects.js"></script>
+    <script type="text/javascript" src="./light.js"></script>
+    <!-- <script src="https://greggman.github.io/webgl-lint/webgl-lint.js" data-gman-debug-helper='
+        {
+          "failUnsetUniforms": true
+        }
+      '>
+      </script> -->
   </head>
   <body>
     <canvas id="gl-canvas" width="512" height="512"> Not supported </canvas>
